responsive design for container in main

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 html {
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
     "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji",
@@ -55,9 +58,40 @@ html {
   letter-spacing: 0.25em;
 }
 .card {
-  background-color: #F3F4F5;
+  background-color: #f3f4f5;
   padding: 1rem;
   margin-bottom: 2rem;
   border-radius: 1rem;
-  box-shadow: 0 0.5rem 1rem rgba(0,0, 0, 0.5);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
+}
+.container {
+  width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin: 0 auto;
+}
+@media (min-width: 576px) {
+  .container {
+      max-width: 540px;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+      max-width: 720px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+      max-width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+      max-width: 1140px;
+  }
+}
+@media (min-width: 1400px) {
+  .container {
+      max-width: 1320px;
+  }
 }
