--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,7 +39,7 @@ html {
   padding: 0 1rem;
   line-height: 2.5rem;
   border-radius: 0.5rem;
-  /* text-transform: uppercase; */
+  border: 0;
 }
 .button:hover {
   background-color: #d95032;
@@ -138,11 +138,15 @@ html {
 @media (min-width: 768px) {
   .container {
     max-width: 720px;
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 }
 @media (min-width: 992px) {
   .container {
     max-width: 960px;
+    padding-left: 4rem;
+    padding-right: 4rem;
   }
 }
 @media (min-width: 1200px) {
@@ -153,6 +157,8 @@ html {
 @media (min-width: 1400px) {
   .container {
     max-width: 1320px;
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 }
 /* @media (min-width: 1920px) {
@@ -209,6 +215,7 @@ html {
   z-index: -1;
   background-position: right center;
   opacity: 0.1;
+  min-height: 100rem;
 }
 .main::before {
   left: 0;
@@ -239,4 +246,41 @@ html {
   color: #8ed8a9;
   max-width: 20rem;
   line-height: 1.33em;
+}
+.form-group {
+  display: flex;
+  margin-bottom: 1rem;
+}
+.form-group__label, .form-group__input {
+  display: block;
+  color:#113343;
+  background-color: rgb(200,200,200);
+  border-style: solid;
+  border-color: rgb(100, 100, 100);
+  padding: 0.5rem 1rem;
+  font-weight: bold;
+}
+.form-group__label {
+  text-transform: uppercase;
+  flex: 0 0 7.5rem;
+  border-top-width: 0.125rem;
+  border-left-width: 0.125rem;
+  border-bottom-width: 0.125rem;
+  border-right-width: 0;
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+.form-group__input {
+  flex: 1 0 10rem;
+  border-top-width: 0.125rem;
+  border-right-width: 0.125rem;
+  border-bottom-width: 0.125rem;
+  border-left-width: 0;
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+} 
+
+.form-submit {
+  display: flex;
+  justify-content: flex-end;
 }
